; ModuleID = '/home/carl/AnghaBench/qmk_firmware/drivers/oled/extr_oled_driver.c_oled_task.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/drivers/oled/extr_oled_driver.c_oled_task.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@oled_initialized = common dso_local global i32 0, align 4
@OLED_SCROLL_TIMEOUT = common dso_local global i64 0, align 8
@oled_active = common dso_local global i64 0, align 8
@oled_dirty = common dso_local global i64 0, align 8
@oled_scroll_timeout = common dso_local global i64 0, align 8
@oled_scrolling = common dso_local global i64 0, align 8
@oled_timeout = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @oled_task() #0 {
  %1 = load i32, i32* @oled_initialized, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %4, label %3

3:                                                ; preds = %0
  br label %8

4:                                                ; preds = %0
  %5 = call i32 @oled_set_cursor(i32 0, i32 0)
  %6 = call i32 (...) @oled_task_user()
  %7 = call i32 (...) @oled_render()
  br label %8

8:                                                ; preds = %4, %3
  ret void
}

declare dso_local i32 @oled_set_cursor(i32, i32) #1

declare dso_local i32 @oled_task_user(...) #1

declare dso_local i32 @oled_render(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
